# OSSS

./: .gitignore  CMakeLists.txt  README  README.md
MVC/: main.cpp  mongoose.c
MVC/Core/: FileCore.cpp
MVC/Core/Headers/: FileCore.h
MVC/Model/: FileUtility.cpp  FileUtility.h  HashUtility.cpp  HashUtility.h  WebUtility.cpp  WebUtility.h
MVC/Model/Header/: FileUtility.h  HashUtility.h  WebUtility.h
MVC/Model/Headers/: FileUtility.h  HashUtility.h  WebUtility.h
Web.UI/: index.html  style.css
Web.UI/Script.UI/: main.js
Web.UI/Style.UI/: style.css
lib/cryptopp/: README
lib/mongoose/: CMakeLists.txt  README
